# whisper-bot

./: .gitignore  .lightning  .lightningignore  README.md  app.py  makefile  pyproject.toml  requirements.txt  run.py
scripts/: install_whisper.sh
src/: telegram_bot.py  whisper_endpoint.py
